# NetSim

./: CMakeLists.txt  README.md  main.cpp
clion_inspections/: Inf-AGH [CLion - Inspections].xml
include/: config.hpp  factory.hpp  global_functions_mock.hpp  helpers.hpp  nodes.hpp  nodes_mocks.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
test/: test_Factory.cpp  test_nodes.cpp  test_nodes_2.cpp  test_package.cpp  test_package_2.cpp  test_simulate.cpp  test_storage_types.cpp
